Fixing page alignments through footer and floating bar

--- a/src/targets/meandall/styles/views/booking-widget.less
+++ b/src/targets/meandall/styles/views/booking-widget.less
@@ -1,5 +1,6 @@
 booking-widget {
-  max-width:@grid-width;
+  padding:0 20px;
+  max-width:initial;
   button-submit {
     min-width: 0;
     height: 36px;
