--- a/src/targets/meandall/styles/views/floating-bar.less
+++ b/src/targets/meandall/styles/views/floating-bar.less
@@ -17,17 +17,22 @@ floating-bar {
       height: 100%;
     }
   }
+  >div {
+    margin: 0px auto;
+    max-width: @grid-width;
+  }
   //- Tabs
   >ul {
     top: -@baseline;
     max-width: @grid-width;
+    padding-left:40px;
     li {
       a {
         font-size: 0.9em;
         line-height: 27px;
         font-family: @ff-heading;
         font-weight: normal !important;
-        padding-top:4px;
+        padding:4px 0 0;
         strong {
           font-weight: normal;
         }
