--- a/src/targets/meandall/styles/views/footer.less
+++ b/src/targets/meandall/styles/views/footer.less
@@ -18,8 +18,10 @@ footer {
     }
   }
   .footer-bottom {
-    padding: 40px 20px 70px 20px;
+    padding: 40px 0 70px 0;
     .grid-wrapper {
+      padding: 0 20px;
+      box-sizing: border-box;
       .clearfix;
       >* {
         width: 50%;
